Fixed space issue on display

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel = "stylesheet" href = "./assets/css/style.css">
 
 
-    <title>Starter</title>
+    <title>Hangman</title>
 </head>
 <body>
     <header>
         <div class="jumbotron">
             <div class="container">
                 <h1>Hangman
-                    <small></small>
+                    <small>sports Addition</small>
                 </h1>
             </div>
           </div>
@@ -25,7 +25,7 @@
         <div>
             <h3>Press Any Key To Get Started</h3>
             <h4>Current Word</h4>
-            <p id = "display"></p><br/>
+            <pre id = "display"></pre><br/>
             <p>Total wins: <span id = "wins"></span></p>
             <p>Total losses: <span id = "loss"></span></p>
             <p>Guesses Remaining: <span id = "guesses"></span></p>
