made changes to the html page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>Hangman
-                    <small>sports Addition</small>
+                    <small>Sports Addition</small>
                 </h1>
             </div>
           </div>
