--- a/index.html
+++ b/index.html
@@ -16,20 +16,25 @@
     <header>
         <div class="jumbotron">
             <div class="container">
-                <h1>Hangman
-                    <small>Sports Addition</small>
+                <h1>Hangman Sports Addition
                 </h1>
             </div>
           </div>
     </header>
-        <div>
-            <h3>Press Any Key To Get Started</h3>
-            <h4>Current Word</h4>
-            <pre id = "display"></pre><br/>
-            <p>Total wins: <span id = "wins"></span></p>
-            <p>Total losses: <span id = "loss"></span></p>
-            <p>Guesses Remaining: <span id = "guesses"></span></p>
-            <p>Letters Already Guessed <span id = "letters"></span></p>
+        <div class = "container">
+            <div class = "row">
+                 <div class ="col-md-6">
+                    <h3>Total wins: <span id = "wins"></span></h3>
+                    <h3>Total losses: <span id = "loss"></span></h3>
+                    <h3>Guesses Remaining: <span id = "guesses"></span></h3>
+                    <h3>Letters Already Guessed <span id = "letters"></span></h3>
+                </div>
+            <div class ="col-md-6">
+                <h2>Press Any Key To Get Started</h2>
+                <h3>Current Word</h3>
+                <pre><h3 id = display></h3></pre>
+            </div>
+             
         </div>
 
 
